--- a/templates/base.html
+++ b/templates/base.html
@@ -247,6 +247,32 @@
             }
         });
     </script>
+
+    <!-- HTMX (for partial updates & HTMX interactions) -->
+    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <script>
+        // Attach CSRF token automatically to HTMX requests (reads from cookie)
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+
+        document.body.addEventListener('htmx:configRequest', function (event) {
+            event.detail.headers['X-CSRFToken'] = getCookie('csrftoken');
+        });
+    </script>
+
     {% block extra_js %}{% endblock %}
 </body>
 
