Local updates: waste logs and UI tweaks

--- a/templates/base.html
+++ b/templates/base.html
@@ -181,7 +181,7 @@
                         <i class="fas fa-cogs me-2"></i>Admin
                     </a>
                     <ul class="collapse list-unstyled ps-4" id="adminSubmenu">
-                        <li><a href="{% url 'core:user_list' %}">Nhân viên</a></li>
+                        <li><a href="{% url 'core:user_list' %}">Tài khoản</a></li>
                         <li><a href="{% url 'core:setting_list' %}">Cài đặt chung</a></li>
                     </ul>
                 </li>
